# loractl

./: .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  .project-standards.yaml  .worktreeinclude  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  justfile  release-please-config.json
.cargo/: audit.toml
.claude/: settings.json
.claude/rules/: burn-lazy-param-init.md  burn-nested-backward-and-param-clone.md  burn-optimizer-and-dropout.md  burn-store-skip-enum-variants.md  burn-wgpu-metal-numerics.md  cubecl-pool-reclaim-stale-page.md  development.md  document-management.md  testing.md
.github/: actionlint.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  claude-review.yml  claude.yml  gpu.yml  release-please.yml  security-audit.yml
config/examples/: flow.yaml  krea2-comfyui.yaml  krea2-dog.yaml  krea2-lora.yaml  lora-wgpu.yaml  lora.yaml
config/probes/: tiny-ledger-balanced.yaml  tiny-ledger-nockpt.yaml
crates/loractl-api/: Cargo.toml
crates/loractl-api/src/: lib.rs  main.rs  paths.rs  routes.rs  state.rs
crates/loractl-api/tests/: api.rs
crates/loractl-bench/: Cargo.toml
crates/loractl-bench/src/: lib.rs
crates/loractl-cli/: Cargo.toml
crates/loractl-cli/src/: cli.rs  main.rs
crates/loractl-cli/tests/: example_config.rs  sample_cmd.rs
crates/loractl-core/: Cargo.toml
crates/loractl-core/examples/: dump_synthetic_run.rs  grad_compare.rs  metal_bisect.rs  nested_backward_probe.rs  quant_grad_compare.rs  quant_probe.rs  step_probe.rs  trace_f16_forward.rs
crates/loractl-core/src/: accuracy.rs  adapter.rs  adapters.rs  block_ckpt.rs  burn_trainer.rs  config.rs  dataset.rs  diffusion_trainer.rs  event.rs  export.rs  flow.rs  fp8.rs  gpt2.rs  hf.rs  lib.rs  lora.rs  mmdit.rs  model.rs  probe.rs  quant.rs  qwen3vl.rs  qwen_vae.rs  sample.rs  train.rs  training_adapter.rs
crates/loractl-core/tests/: adapter_export.rs  adapter_guards.rs  adapter_roundtrip.rs  backend_dispatch.rs  block_ckpt.rs  burn_trainer_reference.rs  checkpoint_roundtrip.rs  convergence.rs  cuda_smoke.rs  dataset_pipeline.rs  diffusion_trainer.rs  dropout.rs  event_json.rs  flow_convergence.rs  flow_reference.rs  flow_task.rs  fp8.rs  fp8_encoder.rs  fp8_mmdit_parity.rs  frozen_base_determinism.rs  gpt2_lora_step.rs  gpt2_multisite_attach.rs  gpt2_parity.rs  gpt2_real.rs  grad_checkpointing.rs  krea2_lora_keys.rs  lora_reference.rs  mmdit_parity.rs  mmdit_real.rs  mmdit_sites.rs  mmdit_token_layout.rs  mnist_lora.rs  model_config.rs  multi_adapter_step.rs  no_render.rs  quant.rs  quant_mmdit.rs  quant_trainer.rs  qwen3vl_parity.rs  qwen3vl_real.rs  (+11 more)
crates/loractl-core/tests/common/: mod.rs
crates/loractl-core/tests/fixtures/: fp8_dequant_golden.json  fp8_lut_golden.json  fp8_mmdit_golden.json  gpt2_tiny_golden.json  mmdit_tiny_golden.json  quant_int4_golden.json  quant_int8_golden.json  qwen3vl_tiny_golden.json  qwen_vae_tiny_golden.json
crates/loractl-core/tests/fixtures/dataset-tiny/: field.txt  fox.txt  sand.txt  sky.txt
crates/loractl-core/tests/fixtures/tiny-gpt2/: model.safetensors
crates/loractl-core/tests/fixtures/tiny-krea2/: raw.safetensors  turbo_fp8.safetensors  turbo_fp8_dequant.safetensors
crates/loractl-core/tests/fixtures/tiny-krea2/text_encoder/: model.safetensors
crates/loractl-core/tests/fixtures/tiny-krea2/tokenizer/: tokenizer.json
crates/loractl-core/tests/fixtures/tiny-krea2/vae/: diffusion_pytorch_model.safetensors
crates/loractl-core/tests/fixtures/tiny-mmdit/: model.safetensors  model_fp8.safetensors
crates/loractl-core/tests/fixtures/tiny-qwen-vae/: config.json  diffusion_pytorch_model.safetensors
crates/loractl-core/tests/fixtures/tiny-qwen-vae-native/: qwen_image_vae.safetensors
crates/loractl-core/tests/fixtures/tiny-qwen3vl/: config.json  model.safetensors
crates/loractl-core/tests/golden/: burn_trainer_steps.json  flow_toy.json  krea2_lora_keys.json  lora_export.json  lora_toy.json  training_adapter_merge.json
crates/loractl-core/tests/support/: mod.rs
docs/: roadmap.md
docs/adrs/: 0001-first-real-target-model.md  0002-adapter-format-and-sample-semantics.md  0003-http-api-event-streaming.md  0004-krea2-image-diffusion-target.md  0005-int4-training-vram-bound.md  0006-reduced-precision-accuracy-gate.md  0007-adapter-algorithm-strategy.md
docs/api/: events.md
docs/blueprint/: README.md  feature-tracker.json  manifest.json
docs/brand/: README.md
docs/prds/: lokr-training-support.md
reference/: burn_trainer_reference.py  flow_reference.py  fp8_reference.py  gpt2_reference.py  gpt2_tiny_reference.py  krea2_lora_keys_reference.py  krea2_lora_train.py  krea2_reference.py  lora_export_reference.py  lora_reference.py  mmdit_reference.py  quant_int4_reference.py  quant_reference.py  qwen3vl_reference.py  qwen_vae_native_reference.py  qwen_vae_reference.py  training_adapter_merge_reference.py
scripts/: ledger-report.py
