[workspace]
resolver = "3"
members = ["crates/loractl-core", "crates/loractl-cli", "crates/loractl-api"]

[workspace.package]
version = "0.9.0" # x-release-please-version
edition = "2024"
license = "MIT"
authors = ["Lauri Gates"]
repository = "https://github.com/laurigates/loractl"
# Bumped from 1.85 to satisfy burn 0.21's MSRV (see loractl-core dependency).
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# HTTP/SSE surface for loractl-api. Default features off: routing/SSE are
# always available; `http1` + `tokio` enable the hyper server and
# `axum::serve`, `json` enables the `Json` extractor.
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
# `time` is deliberate: axum's SSE keep-alive timer and the test timeout
# guards both need it.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "time",
] }
async-stream = "0.3"
