[workspace]
resolver = "3"
members = ["crates/loractl-core", "crates/loractl-cli", "crates/loractl-api"]

[workspace.package]
version = "0.10.0" # x-release-please-version
edition = "2024"
license = "MIT"
authors = ["Lauri Gates"]
repository = "https://github.com/laurigates/loractl"
# Bumped from 1.85 to satisfy burn 0.21's MSRV (see loractl-core dependency).
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# HTTP/SSE surface for loractl-api. Default features off: routing/SSE are
# always available; `http1` + `tokio` enable the hyper server and
# `axum::serve`, `json` enables the `Json` extractor.
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
# `time` is deliberate: axum's SSE keep-alive timer and the test timeout
# guards both need it.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "time",
] }
async-stream = "0.3"

# cubecl 0.10's pool cleanup renumbers page indices under live bindings,
# corrupting them under pool pressure ("Memory page N doesn't exist" storms,
# wrong-page reads → NaN losses, knock-on reserve OOMs) — hit deterministically
# by the ~13 GB int8 streaming load + training on a 24 GB card
# (tracel-ai/cubecl#1401; root cause unfixed upstream as of 0.11-pre). The fork
# pins v0.10.0 + stable page slots (tombstones instead of drain-and-renumber).
# Drop this patch when upstream ships the fix and burn re-pins.
# Every cubecl workspace member in the graph must come from the same source —
# patching only the runtime leaves the graph with two copies of the sibling
# crates' public types (E0308 mismatches against crates.io users).
[patch.crates-io]
cubecl = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-common = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-core = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-cpp = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-cpu = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-cuda = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-hip = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-ir = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-macros = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-macros-internal = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-opt = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-runtime = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-std = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-wgpu = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
cubecl-zspace = { git = "https://github.com/laurigates/cubecl", rev = "0d3824c5243b464e7dca786fda694ecdd6fb9d02" }
