[workspace]
resolver = "3"
members = [
    "crates/loractl-core",
    "crates/loractl-cli",
    "crates/loractl-api",
    "crates/loractl-bench",
]

[workspace.package]
version = "0.15.0" # x-release-please-version
edition = "2024"
license = "MIT"
authors = ["Lauri Gates"]
repository = "https://github.com/laurigates/loractl"
# Bumped from 1.85 to satisfy burn 0.21's MSRV (see loractl-core dependency).
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# HTTP/SSE surface for loractl-api. Default features off: routing/SSE are
# always available; `http1` + `tokio` enable the hyper server and
# `axum::serve`, `json` enables the `Json` extractor.
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
# `time` is deliberate: axum's SSE keep-alive timer and the test timeout
# guards both need it.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "time",
] }
async-stream = "0.3"

# ADR-0005 attribution instrumentation (#132): burn-autodiff with the opt-in
# retention ledger (env-gated by LORACTL_RETENTION_LEDGER; identical to the
# published 0.21.0 when unset). The fork branch is the v0.21.0 tag + the
# ledger commit only — but the WHOLE burn workspace must be patched to it,
# not just burn-autodiff, or cargo builds two copies of burn-backend (the
# git one via burn-autodiff's path deps, the crates.io one via everything
# else) and the Backend traits stop unifying. Same lesson as the 15-crate
# cubecl pin. Remove the block once the attribution round is done — this
# pin exists for measurement, not as a durable dependency.
[patch.crates-io]
burn = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-autodiff = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-backend = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-candle = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-core = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-cpu = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-cubecl = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-cubecl-fusion = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-cuda = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-dataset = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-derive = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-dispatch = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-flex = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-fusion = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-ir = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-ndarray = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-nn = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-optim = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-rocm = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-router = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-std = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-store = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-tch = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-tensor = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-vision = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
burn-wgpu = { git = "https://github.com/laurigates/burn.git", branch = "feat/retention-ledger-v0.21" }
