[package]
name = "loractl-api"
description = "HTTP/SSE server for loractl — serializes core TrainEvents over the wire; renders nothing itself."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "loractl-api"
path = "src/main.rs"

[features]
# Passthrough to loractl-core's GPU backends, mirroring loractl-cli. None
# default, so the stock api build stays offline/ndarray — a
# `compute.backend: cuda|wgpu` config then reaches core's dispatch arm.
wgpu = ["loractl-core/wgpu"]
candle = ["loractl-core/candle"]
cuda = ["loractl-core/cuda"]
tch = ["loractl-core/tch"]

[dependencies]
loractl-core = { path = "../loractl-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
axum.workspace = true
tokio.workspace = true
async-stream.workspace = true
# Names the `Stream` trait for `state::subscribe`'s axum-free return type
# (async-stream produces a futures-core `Stream`).
futures-core = "0.3"
# Constant-time token compare for the bearer-auth gate (#62) — already in the
# resolved tree (and in deny.toml's license allow-list) via burn's deps.
subtle = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
