[package]
name = "loractl-cli"
description = "loractl — a terminal-native LoRA trainer CLI (CLI-first; a GUI can be layered on the same core later)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "loractl"
path = "src/main.rs"

[features]
# Passthrough to loractl-core's GPU backends (M7, #18). None default, so the
# stock CLI build stays offline/ndarray. `just run-wgpu` builds with `wgpu` so a
# `compute.backend: wgpu` config actually reaches core's wgpu dispatch arm
# (without this the flag/config is a runtime no-op that bails). cuda/tch are
# passthrough-only and not runnable on this machine.
wgpu = ["loractl-core/wgpu"]
candle = ["loractl-core/candle"]
cuda = ["loractl-core/cuda"]
tch = ["loractl-core/tch"]

[dependencies]
loractl-core = { path = "../loractl-core" }
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
figment = { version = "0.10", features = ["yaml", "env"] }
indicatif = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error/panic reporting to GlitchTip (Sentry-API compatible). DSN comes from
# the SENTRY_DSN env var; rustls transport avoids a system OpenSSL dependency.
sentry = { version = "0.46", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "anyhow",
    "tracing",
    "reqwest",
    "rustls",
] }

[dev-dependencies]
# `figment::Jail` (env + cwd isolation for the config-precedence tests) is
# gated behind figment's `test` feature.
figment = { version = "0.10", features = ["yaml", "env", "test"] }
