[package]
name = "loractl-core"
description = "Core training pipeline for loractl — config schema, event stream, and the Trainer contract. No CLI, no I/O-presentation opinions."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
# ML backend. `ndarray` is the portable CPU backend (no GPU/CUDA needed for the
# MNIST correctness harness); `autodiff` wraps a backend for training. Backends
# stay generic so a GPU backend (wgpu/cuda) can be swapped in later.
burn = { version = "0.21", default-features = false, features = [
    "std",
    "ndarray",
    "autodiff",
] }
# Safetensors weight loading for the real GPT-2 (M3, #2). Pinned to 0.21.0 to
# unify `burn-core` with the `burn` umbrella above. `safetensors` gives the
# format reader; `std` pulls memmap2 (used by `from_file`) + regex (the
# LayerNorm key remapper). Fully offline — no HTTP client — so the always-run
# tiny-GPT-2 parity test loads the checked-in fixture without touching the
# network.
burn-store = { version = "0.21.0", default-features = false, features = [
    "safetensors",
    "std",
] }
# Adapter-metadata sidecar (M4, #3): burn-store's safetensors `__metadata__`
# is write-only in 0.21 (no public read-back API — see `adapter.rs`), so the
# self-describing bits (seed, rank, alpha, dims) needed to reconstruct a
# LoRA adapter live in a plain `<path>.json` sidecar instead. Real runtime
# dependency, not dev-only: `adapter.rs`/`burn_trainer.rs` read/write it.
serde_json = "1"

[features]
# Opt-in real-MNIST training. `burn/dataset` pulls burn-dataset (where
# `MnistDataset` lives) and `burn/vision` activates its vision datasets. This
# pulls reqwest/tokio and downloads MNIST over the network at runtime, so it is
# NEVER in the default set — the default build/`cargo test` stays offline and
# lean. Exercised on demand via `just test-mnist` / `just lint-mnist`.
mnist = ["burn/dataset", "burn/vision"]
# Opt-in real pretrained-GPT-2 parity test (`tests/gpt2_real.rs`). No extra
# crates: the real weights + golden are produced locally by the Python
# reference (`just gpt2-reference`, which downloads openai-community/gpt2 via
# transformers) and the Rust test reads them from disk. Kept out of the default
# build so `cargo test` stays offline and needs no multi-hundred-MB fixture.
gpt2-real = []
