[package]
name = "loractl-core"
description = "Core training pipeline for loractl — config schema, event stream, and the Trainer contract. No CLI, no I/O-presentation opinions."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
# ML backend. `ndarray` is the portable CPU backend (no GPU/CUDA needed for the
# MNIST correctness harness); `autodiff` wraps a backend for training. Backends
# stay generic so a GPU backend (wgpu/cuda) can be swapped in later.
burn = { version = "0.21", default-features = false, features = [
    "std",
    "ndarray",
    "autodiff",
] }
# Safetensors weight loading for the real GPT-2 (M3, #2). Pinned to 0.21.0 to
# unify `burn-core` with the `burn` umbrella above. `safetensors` gives the
# format reader; `std` pulls memmap2 (used by `from_file`) + regex (the
# LayerNorm key remapper). Fully offline — no HTTP client — so the always-run
# tiny-GPT-2 parity test loads the checked-in fixture without touching the
# network.
burn-store = { version = "0.21.0", default-features = false, features = [
    "safetensors",
    "std",
] }
# Adapter sidecar metadata (M4, #3) and the periodic validation-sample report
# `BurnTrainer` writes — both library code, not just tests, so this lives here
# rather than in [dev-dependencies].
serde_json.workspace = true
# Generic LoRA injection (M6, #17): `regex` matches config target patterns
# against module paths; `safetensors` is the direct writer for the kohya-ss
# adapter export (arbitrary keys + transpose + `.alpha` scalar — a shape
# burn-store's snapshot-save can't express). Both already ride in transitively
# via burn-store at these exact versions, so depending on them directly adds no
# new external surface.
regex = "1"
safetensors = "0.7"
# Qwen3-VL caption conditioning (M10, #21): loads the HF `tokenizer.json`
# shipped with Krea-2-Raw so `Qwen3VlConditioner` can tokenize captions
# through the krea-2 chat template. Pure offline — file-based loading only,
# no hub/HTTP features.
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

[features]
# GPU compute backends (M7, #18). None are in `default`, so `cargo build`/
# `clippy`/`test` and CI stay offline and GPU-free on the always-available
# ndarray+autodiff backend. Each activates a burn backend feature; the runtime
# dispatch arm in `burn_trainer.rs` is `#[cfg]`-gated on the matching feature.
#
# - `wgpu`: Metal on macOS/Apple-Silicon, Vulkan/DX12 elsewhere. The ONE GPU
#   backend runnable + verifiable on this dev machine (`just test-wgpu`).
# - `cuda`: NVIDIA only; needs the CUDA toolkit/nvcc at build time — NOT
#   buildable or runnable on darwin. Compile-verifiable only on a Linux+NVIDIA host.
# - `tch`: libtorch; needs a linked libtorch binary — NOT exercised here.
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
tch = ["burn/tch"]
# Opt-in real-MNIST training. `burn/dataset` pulls burn-dataset (where
# `MnistDataset` lives) and `burn/vision` activates its vision datasets. This
# pulls reqwest/tokio and downloads MNIST over the network at runtime, so it is
# NEVER in the default set — the default build/`cargo test` stays offline and
# lean. Exercised on demand via `just test-mnist` / `just lint-mnist`.
mnist = ["burn/dataset", "burn/vision"]
# Opt-in real pretrained-GPT-2 parity test (`tests/gpt2_real.rs`). No extra
# crates: the real weights + golden are produced locally by the Python
# reference (`just gpt2-reference`, which downloads openai-community/gpt2 via
# transformers) and the Rust test reads them from disk. Kept out of the default
# build so `cargo test` stays offline and needs no multi-hundred-MB fixture.
gpt2-real = []
# Opt-in real Qwen-Image VAE parity test (`tests/qwen_vae_real.rs`, M9). Same
# shape as `gpt2-real`: no extra crates; the real weights + golden come from
# `just vae-real-reference` (downloads Qwen/Qwen-Image's vae via diffusers).
qwen-vae-real = []
# Opt-in real Krea-2-Raw text-encoder parity test (`tests/qwen3vl_real.rs`,
# M10). Same shape: fixtures come from `just qwen3vl-real-reference`.
qwen3vl-real = []
