[package]
name = "loractl-core"
description = "Core training pipeline for loractl — config schema, event stream, and the Trainer contract. No CLI, no I/O-presentation opinions."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
# ML backend. `ndarray` is the portable CPU backend (no GPU/CUDA needed for the
# MNIST correctness harness); `autodiff` wraps a backend for training. Backends
# stay generic so a GPU backend (wgpu/cuda) can be swapped in later.
burn = { version = "0.21", default-features = false, features = [
    "std",
    "ndarray",
    "autodiff",
] }
# Safetensors weight loading for the real GPT-2 (M3, #2). Pinned to 0.21.0 to
# unify `burn-core` with the `burn` umbrella above. `safetensors` gives the
# format reader; `std` pulls memmap2 (used by `from_file`) + regex (the
# LayerNorm key remapper). Fully offline — no HTTP client — so the always-run
# tiny-GPT-2 parity test loads the checked-in fixture without touching the
# network.
burn-store = { version = "0.21.0", default-features = false, features = [
    "safetensors",
    "std",
] }
# Adapter sidecar metadata (M4, #3) and the periodic validation-sample report
# `BurnTrainer` writes — both library code, not just tests, so this lives here
# rather than in [dev-dependencies].
serde_json.workspace = true
# Generic LoRA injection (M6, #17): `regex` matches config target patterns
# against module paths; `safetensors` is the direct writer for the kohya-ss
# adapter export (arbitrary keys + transpose + `.alpha` scalar — a shape
# burn-store's snapshot-save can't express). Both already ride in transitively
# via burn-store at these exact versions, so depending on them directly adds no
# new external surface.
regex = "1"
safetensors = "0.7"
# Qwen3-VL caption conditioning (M10, #21): loads the HF `tokenizer.json`
# shipped with Krea-2-Raw so `Qwen3VlConditioner` can tokenize captions
# through the krea-2 chat template. Pure offline — file-based loading only,
# no hub/HTTP features.
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
# Scaled-fp8 checkpoint loading (M15, #82): `fp8.rs` mmaps the safetensors
# file once and shares it across its lazy dequant closures — the same crate
# (and pattern) burn-store's own lazy file path uses, so this already rides
# in transitively at this exact version via burn-store's `std` feature.
memmap2 = "0.9"
# Image dataset pipeline (M12, #23): decode + resize the training images.
# Default features off — only the two formats the kohya-style folder
# convention actually uses; no HDR/EXR/AVIF subtree.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# On-demand tokenizer fetch (ComfyUI support): a ComfyUI install ships no
# `tokenizer.json`, so when neither `model.tokenizer` nor the base-dir file
# exists, `hf.rs` fetches the model-invariant Qwen3-VL tokenizer once, verifies
# a pinned SHA-256, and caches it under `HF_HOME`. `ureq` is a minimal
# pure-Rust blocking client over the rustls stack already in the workspace
# tree; `sha2` (already transitive via burn-store) does the integrity check.
# The fetch is lazy — a run with a local tokenizer never touches the network,
# so offline CI is unaffected.
ureq = { version = "3", default-features = false, features = ["rustls"] }
sha2 = "0.10"

[features]
# GPU compute backends (M7, #18). None are in `default`, so `cargo build`/
# `clippy`/`test` and CI stay offline and GPU-free on the always-available
# ndarray+autodiff backend. Each activates a burn backend feature; the runtime
# dispatch arm in `burn_trainer.rs` is `#[cfg]`-gated on the matching feature.
#
# - `wgpu`: Metal on macOS/Apple-Silicon, Vulkan/DX12 elsewhere. The ONE GPU
#   backend runnable + verifiable on this dev machine (`just test-wgpu`).
# - `cuda`: NVIDIA only; needs the CUDA toolkit/nvcc at build time — NOT
#   buildable or runnable on darwin. Compile-verifiable only on a Linux+NVIDIA host.
# - `tch`: libtorch; needs a linked libtorch binary — NOT exercised here.
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
tch = ["burn/tch"]
# candle: burn's candle-core backend with Metal kernels — an alternative GPU
# path on macOS with a completely independent kernel stack from cubecl/wgpu,
# and the only burn backend offering bf16 on Metal (the Krea-2 checkpoint's
# native dtype, with f32-like range). Added while isolating wgpu autodiff
# numeric corruption on Apple Silicon (see examples/grad_compare.rs).
candle = ["burn/candle", "burn/candle-metal"]
# Opt-in real-MNIST training. `burn/dataset` pulls burn-dataset (where
# `MnistDataset` lives) and `burn/vision` activates its vision datasets. This
# pulls reqwest/tokio and downloads MNIST over the network at runtime, so it is
# NEVER in the default set — the default build/`cargo test` stays offline and
# lean. Exercised on demand via `just test-mnist` / `just lint-mnist`.
mnist = ["burn/dataset", "burn/vision"]
# Opt-in real pretrained-GPT-2 parity test (`tests/gpt2_real.rs`). No extra
# crates: the real weights + golden are produced locally by the Python
# reference (`just gpt2-reference`, which downloads openai-community/gpt2 via
# transformers) and the Rust test reads them from disk. Kept out of the default
# build so `cargo test` stays offline and needs no multi-hundred-MB fixture.
gpt2-real = []
# Opt-in real Qwen-Image VAE parity test (`tests/qwen_vae_real.rs`, M9). Same
# shape as `gpt2-real`: no extra crates; the real weights + golden come from
# `just vae-real-reference` (downloads Qwen/Qwen-Image's vae via diffusers).
qwen-vae-real = []
# Opt-in real Krea-2-Raw text-encoder parity test (`tests/qwen3vl_real.rs`,
# M10). Same shape: fixtures come from `just qwen3vl-real-reference`.
qwen3vl-real = []
# Opt-in real Krea-2-Raw MMDiT staged-parity test (`tests/mmdit_real.rs`,
# M11; depth-truncated — see the test docs). Fixtures: `just mmdit-real-reference`.
mmdit-real = []

[dev-dependencies]
# int4 (Q4S) frozen-base quantization goldens (#96). burn-ndarray gates its Q4
# `quantize` behind the empty `export_tests` feature (Q8/int8 is always on; Q4 is
# not) — so the offline int4 quant tests need it enabled. As a dev-dependency it
# feature-unifies into `cargo test` (the same burn-ndarray the lib pulls via
# `burn/ndarray`, now with export_tests), but stays OUT of `cargo build`/
# `just install` — the real cuda run never touches the ndarray Q4 path.
# `default-features = false` so it adds only export_tests to whatever features
# burn already turns on; unification is additive, so std/simd/etc. are unaffected
# and the int8 goldens are untouched (export_tests only ADDS the Q4/Q2 arms).
burn-ndarray = { version = "0.21", default-features = false, features = [
    "export_tests",
] }
